# Noodswap

./: .dockerignore  .env.example  .gitignore  .pylintrc  .ruff.toml  AGENTS.md  Dockerfile  Jenkinsfile  README.md  bot.py  card_image_distinct_report.json  card_image_pull_report.json  card_image_pull_report_desserts.json  noodswap.db  pyproject.toml  requirements.txt
.agents/: quickstart.md
bot/: app.py  battle_engine.py  card_display.py  card_economy.py  card_search.py  card_value.py  command_gate.py  command_utils.py  commands.py  commands_admin.py  commands_catalog.py  commands_economy.py  commands_gambling.py  commands_social.py  compat.py  fonts.py  frames.py  images.py  migrations.py  monopoly.py  morphs.py  presentation.py  rarities.py  repositories.py  services.py  settings.py  storage.py  topgg_webhook.py  trait_rarities.py  utils.py  view_catalog.py  view_confirmations.py  view_drop.py  view_help.py  view_sortable_lists.py  view_text.py  view_trade.py  view_utils.py
data/: README.md
deploy/: .env.example  docker-compose.prod.yml  runtime.env.example  update.sh
docs/: README.md  architecture.md  commands-and-ux.md  data-model.md  deploy-github-actions.md  deploy-jenkins.md  development-runbook.md  morph-expansion-backlog.md  refactor-phase-3.md  roadmap-and-known-issues.md
noodswap/: __init__.py  app.py  battle_engine.py  card_display.py  card_economy.py  card_search.py  cards.py  command_utils.py  commands.py  commands_admin.py  commands_catalog.py  commands_economy.py  commands_gambling.py  commands_social.py  compat.py  fonts.py  frames.py  utils.py  (+23 more)
(+122 files in other folders)
