[project]
name = "noodswap"
version = "0.1.0"
description = "Discord trading-card style bot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord.py>=2.7.1",
    "Pillow>=12.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.15.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
addopts = "-v --tb=short"
